--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -12,7 +12,7 @@ div.container > div.posts {
   nb-list-item {
     padding: 0;
     flex-direction: column;
-    div.header {
+    div.footer {
       width: 100%;
       padding: 1rem;
       display: flex;
