--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -1,17 +1,32 @@
-<div class="posts">
-  <div class="grid">
+<div class="container">
+  <div class="filter">
     <nb-card>
-      <nb-card-header>
+      <nb-card-header>Filter</nb-card-header>
+      <nb-card-body>
         <nb-select placeholder="All" size="medium">
           <nb-option>All</nb-option>
           <nb-option *ngFor="let profile of profileService.profiles" [value]="profile.username">{{ profile.display_name }}</nb-option>
         </nb-select>
-      </nb-card-header>
+      </nb-card-body>
     </nb-card>
   </div>
-  <div class="detail">
+  <div class="posts">
     <nb-card>
-      <nb-card-header>Single Post</nb-card-header>
+      <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
+        <nb-list-item *ngFor="let post of posts">
+          <div *ngFor="let item of post.items">
+            <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
+            <video *ngIf="item.type == 'video'" [src]="postService.getMediaPath(post.owner_username, item.filename)"></video>
+          </div>
+          <div class="footer">
+            <div>
+              <div><b>{{ post.owner_username }}</b></div>
+              <div>{{ post.creation_time }}</div>
+            </div>
+            <button nbButton status="danger"><nb-icon icon="trash-2-outline"></nb-icon></button>
+          </div>
+        </nb-list-item>
+      </nb-list>
     </nb-card>
   </div>
 </div>
