--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -16,7 +16,7 @@
         <nb-list-item *ngFor="let post of posts">
           <div *ngFor="let item of post.items">
             <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
-            <video *ngIf="item.type == 'video'" controls muted>
+            <video *ngIf="item.type == 'video'" controls muted [poster]="postService.getPosterPath(post.owner_username, item.filename)">
               <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
             </video>
           </div>
