--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -22,6 +22,9 @@ div.container > div.posts {
     img {
       max-width: 100%;
     }
+    video {
+      max-width: 100%;
+    }
   }
 }
 div.container > div.detail {
