--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -1,20 +1,22 @@
 div.container {
   display: flex;
-  @media (max-width: 991.98px) { flex-direction: column }
+  @media (max-width: 767.98px) { flex-direction: column }
 }
 div.container > div.posts {
   flex: 6;
-  @media (max-width: 991.98px) { flex: none; }
+  @media (max-width: 767.98px) { flex: none; }
 
   margin-left: 2rem;
-  @media (max-width: 991.98px) { margin-left: 0rem }
+  @media (max-width: 767.98px) { margin-left: 0rem }
 
   nb-list-item {
     padding: 0;
-    flex-direction: column;
+    nb-card {
+      padding-bottom: 0.5rem;
+    }
     div.footer {
       width: 100%;
-      padding: 1rem;
+      padding: 0.25rem 1rem;
       display: flex;
       justify-content: space-between;
       align-items:center;
@@ -29,5 +31,5 @@ div.container > div.posts {
 }
 div.container > div.detail {
   flex: 4;
-  @media (max-width: 991.98px) { flex: none; }
+  @media (max-width: 767.98px) { flex: none; }
 }
