--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -12,20 +12,22 @@
   </div>
   <div class="posts">
     <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
-      <nb-list-item *ngFor="let post of posts">
+      <nb-list-item *ngFor="let post of posts; let itemIndex=index;">
         <nb-card>
-          <div *ngFor="let item of post.items">
-            <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
-            <video *ngIf="item.type == 'video'" controls muted [poster]="postService.getPosterPath(post.owner_username, item.thumb_image_filename)">
-              <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
-            </video>
+          <div *ngFor="let item of post.items" class="media">
+            <div>
+              <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
+              <video *ngIf="item.type == 'video'" controls muted [poster]="postService.getPosterPath(post.owner_username, item.thumb_image_filename)">
+                <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
+              </video>
+            </div>
+            <button nbButton (click)="delete(post.shortcode, itemIndex)"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
           <div class="footer">
             <div>
               <div><b>{{ post.owner_username }}</b></div>
               <div>{{ post.creation_time }}</div>
             </div>
-            <button nbButton status="danger"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
         </nb-card>
       </nb-list-item>
