--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -11,24 +11,26 @@
     </nb-card>
   </div>
   <div class="posts">
-    <nb-card>
-      <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
-        <nb-list-item *ngFor="let post of posts">
-          <div *ngFor="let item of post.items">
-            <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
-            <video *ngIf="item.type == 'video'" controls muted [poster]="postService.getPosterPath(post.owner_username, item.thumb_image_filename)">
-              <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
-            </video>
+    <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
+      <nb-list-item *ngFor="let post of posts; let postIndex=index;">
+        <nb-card>
+          <div *ngFor="let item of post.items; let itemIndex=index;" class="media">
+            <div>
+              <img *ngIf="item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, item.filename)">
+              <video *ngIf="item.type == 'video'" controls muted [poster]="postService.getPosterPath(post.owner_username, item.thumb_image_filename)">
+                <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
+              </video>
+            </div>
+            <button nbButton (click)="delete(post, item, postIndex, itemIndex)"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
           <div class="footer">
             <div>
               <div><b>{{ post.owner_username }}</b></div>
               <div>{{ post.creation_time }}</div>
             </div>
-            <button nbButton status="danger"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
-        </nb-list-item>
-      </nb-list>
-    </nb-card>
+        </nb-card>
+      </nb-list-item>
+    </nb-list>
   </div>
 </div>
