--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -3,7 +3,7 @@
     <nb-card>
       <nb-card-header>Profile</nb-card-header>
       <nb-card-body>
-        <nb-select placeholder="All" size="medium" (selectedChange)="selectedProfileChanged($event)">
+        <nb-select placeholder="All" size="medium" [selected]="username" (selectedChange)="selectedProfileChanged($event)">
           <nb-option>All</nb-option>
           <nb-option *ngFor="let profile of profileService.profiles" [value]="profile.username">{{ profile.display_name }}</nb-option>
         </nb-select>
