creation_time formatter

--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -47,7 +47,7 @@
           <div class="footer">
             <div>
               <div><b>{{ post.owner_username }}</b></div>
-              <div>{{ post.creation_time }}</div>
+              <div>{{ post.creation_time | date:'medium' }}</div>
             </div>
           </div>
         </nb-card>
