--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -34,7 +34,7 @@
     </nb-card>
   </div>
   <div class="list">
-    <nb-list nbInfiniteList [threshold]="500" [listenWindowScroll]="true" (bottomThreshold)="loadNext()">
+    <nb-list nbInfiniteList [threshold]="1500" [listenWindowScroll]="true" (bottomThreshold)="loadNext()">
       <nb-list-item *ngFor="let post of posts; let postIndex=index;">
         <nb-card>
           <div *ngFor="let item of post.items; let itemIndex=index;" class="media">
@@ -44,12 +44,19 @@
             </video>
             <button nbButton (click)="delete(post, item, postIndex, itemIndex)"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
-          <div class="footer">
-            <div>
-              <div><b>{{ this.profileService.display_names.get(post.owner_username) }}</b></div>
-              <div>{{ post.creation_time | date:'medium' }}</div>
-            </div>
-          </div>
+          <nb-accordion>
+            <nb-accordion-item>
+              <nb-accordion-item-header>
+                <div>
+                  <div><b>{{ this.profileService.display_names.get(post.owner_username) }}</b></div>
+                  <div>{{ post.creation_time | date:'medium' }}</div>
+                </div>
+              </nb-accordion-item-header>
+              <nb-accordion-item-body>
+                <div>{{ post.caption }}</div>
+              </nb-accordion-item-body>
+            </nb-accordion-item>
+          </nb-accordion>
         </nb-card>
       </nb-list-item>
     </nb-list>
