instagram external link

--- a/web/src/app/profile-detail/profile-detail.component.html
+++ b/web/src/app/profile-detail/profile-detail.component.html
@@ -6,6 +6,9 @@
       [picture]="profileService.getProfileImagePath(profile.image_filename)"
       shape="rectangle" size="large">
     </nb-user>
+    <nb-actions size="small">
+      <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
+    </nb-actions>
   </nb-card-header>
   <nb-accordion multi>
     <nb-accordion-item>
