--- a/web/src/app/profile-detail/profile-detail.component.scss
+++ b/web/src/app/profile-detail/profile-detail.component.scss
@@ -1,3 +1,8 @@
+nb-card-header {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 0;
+}
 nb-accordion-item-body div.row {
   display: flex;
   p.title { flex: 5; margin-right: 1rem;}
