navigate to post

--- a/web/src/app/profile-detail/profile-detail.component.html
+++ b/web/src/app/profile-detail/profile-detail.component.html
@@ -7,6 +7,7 @@
       shape="rectangle" size="large">
     </nb-user>
     <nb-actions size="small">
+      <nb-action icon="grid" title="View Archived Posts" (click)="navigateToPosts(profile.username)"></nb-action>
       <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
     </nb-actions>
   </nb-card-header>
