--- a/web/src/app/profile-detail/profile-detail.component.html
+++ b/web/src/app/profile-detail/profile-detail.component.html
@@ -7,6 +7,7 @@
       shape="rectangle" size="large">
     </nb-user>
     <nb-actions size="small">
+      <nb-action icon="grid" title="View Archived Posts" (click)="navigateToPosts(profile.username)"></nb-action>
       <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
     </nb-actions>
   </nb-card-header>
@@ -60,11 +61,11 @@
         </div>
         <div class="row" *ngIf="posts.earliest_time as earliest_time">
           <p class="title"><b>Earliest</b></p>
-          <p class="detail">{{earliest_time}}</p>
+          <p class="detail">{{ earliest_time | date:'medium' }}</p>
         </div>
         <div class="row" *ngIf="posts.latest_time as latest_time">
           <p class="title"><b>Latest</b></p>
-          <p class="detail">{{latest_time}}</p>
+          <p class="detail">{{ latest_time | date:'medium' }}</p>
         </div>
       </nb-accordion-item-body>
     </nb-accordion-item>
