--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -60,9 +60,9 @@
       <nb-list-item *ngFor="let post of posts; let postIndex=index;">
         <nb-card>
           <div *ngFor="let item of post.items; let itemIndex=index;" class="media">
-            <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.owner_username, item.filename)">
-            <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.owner_username, item.thumb_image_filename)">
-              <source [src]="postService.getMediaPath(post.owner_username, item.filename)" type="video/mp4">
+            <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
+            <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
+              <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
             </video>
             <button nbButton (click)="delete(post, item, postIndex, itemIndex)"><nb-icon icon="trash-2-outline"></nb-icon></button>
           </div>
@@ -70,8 +70,8 @@
             <nb-accordion-item>
               <nb-accordion-item-header>
                 <div>
-                  <div><b>{{ this.profileService.display_names.get(post.owner_username) }}</b></div>
-                  <div>{{ post.creation_time | date:'medium' }}</div>
+                  <div><b>{{ this.profileService.display_names.get(post.username) }}</b></div>
+                  <div>{{ post.timestamp | date:'medium' }}</div>
                 </div>
               </nb-accordion-item-header>
               <nb-accordion-item-body>
