--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -6,10 +6,6 @@ div.posts > div.filter {
   flex: 4;
   @media (max-width: 767.98px) { flex: none; }
 
-  margin-right: 2rem;
-  @media (max-width: 991.98px) { margin-right: 1rem }
-  @media (max-width: 767.98px) { margin-right: 0 }
-
   position: -webkit-sticky;
   position: sticky;
   top: 7rem;
@@ -27,6 +23,10 @@ div.posts > div.filter {
 div.posts > div.list {
   flex: 6;
   @media (max-width: 767.98px) { flex: none; }
+  
+  margin: 0 2rem;
+  @media (max-width: 991.98px) { margin: 0 1rem; }
+  @media (max-width: 767.98px) { margin: 0; }
 
   nb-list-item {
     padding: 0;
