--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -20,6 +20,11 @@ div.posts > div.filter {
     max-height: 100%;
     @media (max-width: 767.98px) { max-height: 20rem }
   }
+
+  nb-card-header {
+    display: flex;
+    justify-content: space-between;
+  }
   
   nb-card.time_range nb-card-body nb-select:first-of-type {
     margin-bottom: 0.5rem;
