--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div class="posts">
   <div class="filter">
-    <nb-card>
+    <nb-card class="profiles">
       <nb-card-header> 
         <div>Profile</div>
         <button 
