--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -6,9 +6,6 @@ div.filter {
   flex: 4;
   @media (max-width: 767.98px) { flex: none; }
 
-  display: flex;
-  flex-direction: column;
-
   position: -webkit-sticky;
   position: sticky;
   top: 7rem;
@@ -24,10 +21,10 @@ div.trailing {
 }
 
 nb-card.profile-list {
-  // max-height: 100%;
-  // @media (max-width: 991.98px) { max-height: none; }
-
   @media (max-width: 767.98px) { display: none; }
+
+  max-height: 100%;
+  @media (max-width: 991.98px) { max-height: calc(100% - 14.5rem); }
 
   nb-card-header {
     display: flex;
