--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -20,6 +20,10 @@ div.trailing {
   @media (max-width: 991.98px) { display: none; }
 }
 
+nb-card {
+  margin-bottom: 1.5rem;
+  @media (max-width: 991.98px) { margin-bottom: 1rem;}
+}
 nb-card.profile-list {
   @media (max-width: 767.98px) { display: none; }
 
