--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -28,7 +28,7 @@ nb-card.profile-list {
   @media (max-width: 767.98px) { display: none; }
 
   max-height: 100%;
-  @media (max-width: 991.98px) { max-height: calc(100% - 14.5rem); }
+  @media (max-width: 991.98px) { max-height: calc(100% - 12.75rem); }
 
   nb-card-header {
     display: flex;
@@ -46,6 +46,10 @@ nb-card.profile-list {
   nb-list-item.active {
     background-color: #E0ECF8;
   }
+}
+nb-card.profile-selector {
+  display: none;
+  @media (max-width: 767.98px) { display: flex; }
 }
 nb-card.time-range-selector {
   display: none;
