--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -105,8 +105,8 @@
                 </div>
               </nb-accordion-item-header>
               <nb-accordion-item-body>
-                <div class="shortcode"><b>{{ post.shortcode }}</b></div>
-                <div>{{ post.caption }}</div>
+                <div><b>{{ post.shortcode }}</b></div>
+                <div class="caption">{{ post.caption }}</div>
               </nb-accordion-item-body>
             </nb-accordion-item>
           </nb-accordion>
