--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -1,35 +1,78 @@
 div.posts {
   display: flex;
-  @media (max-width: 767.98px) { flex-direction: column }
+  @media (max-width: 767.98px) { flex-direction: column; }
 }
-div.posts > div.filter {
+div.filter {
   flex: 4;
   @media (max-width: 767.98px) { flex: none; }
-
-  margin-right: 2rem;
-  @media (max-width: 991.98px) { margin-right: 1rem }
-  @media (max-width: 767.98px) { margin-right: 0 }
 
   position: -webkit-sticky;
   position: sticky;
   top: 7rem;
   @media (max-width: 991.98px) { top: 6.25rem; }
-  @media (max-width: 767.98px) { position: static }
+  @media (max-width: 767.98px) { position: static; }
 
   height: calc(100vh - 8.75rem);
-  @media (max-width: 991.98px) { height: calc(100vh - 7.25rem) }
-  @media (max-width: 767.98px) { height: auto }
+  @media (max-width: 991.98px) { height: calc(100vh - 7.25rem); }
+  @media (max-width: 767.98px) { height: auto; }
+}
+div.trailing {
+  @media (max-width: 991.98px) { display: none; }
+}
 
-  nb-card.time_range nb-card-body nb-select:first-of-type {
+nb-card {
+  margin-bottom: 1.5rem;
+  @media (max-width: 991.98px) { margin-bottom: 1rem; }
+}
+nb-card.profile-list {
+  @media (max-width: 767.98px) { display: none; }
+
+  max-height: 100%;
+  @media (max-width: 991.98px) { max-height: calc(100% - 12.75rem); }
+
+  nb-card-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nb-list-item:focus {
+    outline: none;
+  }
+  
+  nb-list-item:hover {
+    background-color: #EFF5FB;
+  }
+  
+  nb-list-item.active {
+    background-color: #E0ECF8;
+  }
+}
+nb-card.profile-selector {
+  display: none;
+  @media (max-width: 767.98px) { display: flex; }
+}
+nb-card.time-range-selector {
+  display: none;
+  @media (max-width: 991.98px) { display: flex; }
+
+  nb-select:first-of-type {
     margin-bottom: 0.5rem;
   }
 }
+
 div.posts > div.list {
-  flex: 6;
+  flex: 7;
   @media (max-width: 767.98px) { flex: none; }
+  
+  margin: 0 1.5rem;
+  @media (max-width: 991.98px) { margin: 0 0 0 1rem; }
+  @media (max-width: 767.98px) { margin: 0; }
 
   nb-list-item {
     padding: 0;
+    nb-card {
+      width: 100%;
+    }
     div.media {
       position: relative;
       > button {
@@ -48,7 +91,7 @@ div.posts > div.list {
       display:block;
     }
     div.media > img, video {
-      max-width: 100%;
+      width: 100%;
     }
     nb-accordion {
       box-shadow: none;
@@ -58,7 +101,8 @@ div.posts > div.list {
       }
     }
     nb-accordion-item-body {
-      div {
+      div.caption {
+        margin-top: 0.25rem;
         word-break: break-word;
       }
     }
