--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -52,11 +52,14 @@ nb-card.profile-selector {
   @media (max-width: 767.98px) { display: flex; }
 }
 nb-card.time-range-selector {
-  display: none;
-  @media (max-width: 991.98px) { display: flex; }
-
   nb-select:first-of-type {
     margin-bottom: 0.5rem;
+  }
+}
+div.leading {
+  nb-card.time-range-selector {
+    display: none;
+    @media (max-width: 991.98px) { display: flex; }
   }
 }
 
