--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,9 +1,1 @@
-@import 'themes';
-
-// framework component styles
-@import '~@nebular/theme/styles/globals';
-
-// install the framework styles
-@include nb-install() {
-  @include nb-theme-global();
-};
+/* You can add global styles to this file, and also import other style files */
