--- a/web/src/themes.scss
+++ b/web/src/themes.scss
@@ -1,3 +1,4 @@
 @forward '@nebular/theme/styles/theming';
 @use '@nebular/theme/styles/theming' as *;
 @use '@nebular/theme/styles/themes/default';
+@use '@nebular/theme/styles/themes/dark';
