--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -16,6 +16,7 @@
       </nb-list-item>
     </nb-list>
   </nb-sidebar>
-  <nb-layout-column>posts grid</nb-layout-column>
-  <nb-layout-column>posts detail</nb-layout-column>
+  <nb-layout-column style="padding: 1.5rem;">
+    <router-outlet></router-outlet>
+  </nb-layout-column>
 </nb-layout>
