--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -1,1 +1,46 @@
-<p>posts works!</p>
+<div class="container">
+  <nb-card class="grid">
+    <nb-card-body>
+      <div>{{ username }}</div>
+    </nb-card-body>
+  </nb-card>
+  <nb-card class="detail" *ngIf="profile$ | async as profile">
+    <nb-card-header>
+      <nb-user 
+        [name]="profile.display_name" 
+        [title]="profile.username" 
+        [picture]="profileService.getProfileImagePath(profile.image_filename)"
+        shape="rectangle" size="large">
+      </nb-user>
+      <nb-actions size="small">
+        <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
+      </nb-actions>
+    </nb-card-header>
+    <nb-card-body>
+      <div class="row">
+        <p class="title"><b>Username</b></p>
+        <p class="detail">{{ profile.username }}</p>
+      </div>
+      <div class="row">
+        <p class="title"><b>Full Name</b></p>
+        <p class="detail">{{ profile.full_name }}</p>
+      </div>
+      <div class="row">
+        <p class="title"><b>Biography</b></p>
+        <p class="detail">{{ profile.biography }}</p>
+      </div>
+      <div class="row" *ngIf="profile.posts as posts">
+        <p class="title"><b>Count</b></p>
+        <p class="detail">{{ posts.count }}</p>
+      </div>
+      <div class="row" *ngIf="profile.posts?.earliest_timestamp as earliest_timestamp">
+        <p class="title"><b>Earliest</b></p>
+        <p class="detail">{{ earliest_timestamp | date:'medium' }}</p>
+      </div>
+      <div class="row" *ngIf="profile.posts?.latest_timestamp as latest_timestamp">
+        <p class="title"><b>Latest</b></p>
+        <p class="detail">{{ latest_timestamp | date:'medium' }}</p>
+      </div>
+    </nb-card-body>
+  </nb-card>
+</div>
