--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -13,7 +13,7 @@
         shape="rectangle" size="large">
       </nb-user>
       <nb-actions size="small">
-        <nb-action icon="edit-outline" title="Edit Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
+        <nb-action icon="edit-outline" title="Edit Profile" (click)="openEditWindow(profile.username)"></nb-action>
         <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
       </nb-actions>
     </nb-card-header>
